# baremetal-drivers

./: .gitignore  BUILD.md  CMakeLists.txt  DESIGN.md  DOCUMENTATION.md  LICENSE  README.md  SECURITY.md  atf-env.py  target_aarch64.cmake  target_rv32.cmake
examples/hello_world/: .gitignore  CMakeLists.txt  README.md  hello_world.c  test.simics
helpers/: CMakeLists.txt  bridge_helper.cpp  fsbl_boot_help.c  mylibc.cpp
helpers/inc/: CMakeLists.txt  bridge_helper.h  fsbl_boot_help.h  helpers.md
inc/: CMakeLists.txt  debug.h  hps_address_map.h  system.h
inc/base/: CMakeLists.txt  device.h
inc/ccu/: CMakeLists.txt  ccu.h  ccu.md  ccu_internal.h  ccu_regs.h
inc/clkmgr/: CMakeLists.txt  clkmgr.h  clkmgr.md  clkmgr_internal.h  clkmgr_regs.h
inc/combophy/: CMakeLists.txt  combophy.h  combophy.md  combophy_internal.h  combophy_regs.h
inc/dma/: CMakeLists.txt  dma.h  dma.md  dma_internal.h  dma_regs.h
inc/gic/: CMakeLists.txt  gic.h  gic.md  gic_internal.h  gic_regs.h
inc/gpio/: CMakeLists.txt  gpio.h  gpio.md  gpio_internal.h  gpio_regs.h
inc/hps_mailbox/: CMakeLists.txt  hps_mailbox.h  hps_mailbox.md  hps_mailbox_internal.h  hps_mailbox_regs.h
inc/i2c/: CMakeLists.txt  i2c.h  i2c.md  i2c_internal.h  i2c_regs.h
inc/i3c/: CMakeLists.txt  i3c.h  i3c.md  i3c_internal.h  i3c_regs.h
inc/mmu/: CMakeLists.txt  mmu.md  page_tables.h
inc/noc_firewall/: CMakeLists.txt  noc_firewall.h  noc_firewall.md  noc_firewall_internal.h  noc_firewall_regs.h
inc/noc_probe/: CMakeLists.txt  noc_probe.h  noc_probe.md  noc_probe_internal.h  noc_probe_regs.h
inc/qspi/: CMakeLists.txt  qspi.h  qspi.md  qspi_internal.h  qspi_regs.h
inc/rstmgr/: CMakeLists.txt  rstmgr.h  rstmgr.md  rstmgr_internal.h  rstmgr_regs.h
inc/sdmmc/: CMakeLists.txt  sdmmc.h  sdmmc.md  sdmmc_internal.h  sdmmc_regs.h
inc/smmu/: CMakeLists.txt  smmu.h  smmu.md  smmu_internal.h  smmu_regs.h
inc/spi/: CMakeLists.txt  spi.h  spi.md  spi_internal.h  spi_regs.h
inc/sysmgr/: CMakeLists.txt  sysmgr.h  sysmgr.md  sysmgr_internal.h  sysmgr_regs.h
inc/timer/: CMakeLists.txt  timer.h  timer.md  timer_internal.h  timer_regs.h
inc/uart/: CMakeLists.txt  uart.h  uart.md  uart_internal.h  uart_regs.h
inc/watchdog/: CMakeLists.txt  watchdog.h  watchdog.md  watchdog_internal.h  watchdog_regs.h
inc/xgmac/: CMakeLists.txt  mrvl_phy_helper.h  xgmac.h  xgmac_internal.h  xgmac_regs.h
src/: CMakeLists.txt
src/base/: CMakeLists.txt  device.c
src/ccu/: CMakeLists.txt  ccu.c  ccu_internal.c
src/clkmgr/: CMakeLists.txt  clkmgr.c  clkmgr_internal.c
src/combophy/: CMakeLists.txt  combophy.c  combophy_internal.c
src/dma/: CMakeLists.txt  dma.c  dma_internal.c
src/gic/: CMakeLists.txt  gic.c  gic_internal.c
src/gpio/: CMakeLists.txt  gpio.c  gpio_internal.c
src/hps_mailbox/: CMakeLists.txt  hps_mailbox.c  hps_mailbox_internal.c
src/i2c/: CMakeLists.txt  i2c.c  i2c_internal.c
src/i3c/: CMakeLists.txt  i3c.c  i3c_internal.c
src/mmu/: CMakeLists.txt  page_tables.cpp
src/noc_firewall/: CMakeLists.txt  noc_firewall.c  noc_firewall_internal.c
src/noc_probe/: CMakeLists.txt  noc_probe.c  noc_probe_internal.c
src/qspi/: CMakeLists.txt  qspi.c  qspi_internal.c
src/rstmgr/: CMakeLists.txt  rstmgr.c  rstmgr_internal.c
src/sdmmc/: CMakeLists.txt  sdmmc.c  sdmmc_internal.c
src/smmu/: CMakeLists.txt  smmu.c  smmu_internal.c
src/spi/: CMakeLists.txt  spi.c  spi_internal.c
src/sysmgr/: CMakeLists.txt  sysmgr.c  sysmgr_internal.c
src/timer/: CMakeLists.txt  timer.c  timer_internal.c
src/uart/: CMakeLists.txt  uart.c  uart.md  uart_internal.c
src/watchdog/: CMakeLists.txt  watchdog.c  watchdog_internal.c
src/xgmac/: CMakeLists.txt  mrvl_phy_helper.c  xgmac.c  xgmac_internal.c
test/: CMakeLists.txt  TESTING.md
test/simics/atf-boot/: CMakeLists.txt  simple_main.cpp  test.simics
test/simics/bridge/: CMakeLists.txt  about.md  bridge_test.c  test.simics
test/simics/ccu/: CMakeLists.txt  ccu_test.c  test.simics
test/simics/combophy/: CMakeLists.txt  about.md  combophy_test.c  test.simics
test/simics/dma/: CMakeLists.txt  about.md  dma_test.c  test.simics
test/simics/hello-world/: CMakeLists.txt  printf_hello_world.c  test.simics
test/simics/hps_mailbox/: CMakeLists.txt  about.md  hps_mailbox_test.c  test.simics
test/simics/i2c/: CMakeLists.txt  about.md  i2c_test.c  test.simics
test/simics/i3c/: CMakeLists.txt  about.md  i3c_test.c  test.simics
test/simics/mmu/: CMakeLists.txt  about.md  mmu_test.c  test.simics
test/simics/noc_firewall/: CMakeLists.txt  about.md  noc_firewall_test.c  test.simics
test/simics/noc_probe/: CMakeLists.txt  noc_probe_test.c  test.simics
test/simics/ocram-boot/: CMakeLists.txt  simple_main.cpp  test.simics
test/simics/qspi/: CMakeLists.txt  about.md  qspi_test.c  test.simics
test/simics/sdmmc/: CMakeLists.txt  about.md  sdmmc_test.c  test.simics
test/simics/smmu/: CMakeLists.txt  smmu_test.c  test.simics
test/simics/spi/: CMakeLists.txt  about.md  spi_test.c  test.simics
test/simics/timer/: CMakeLists.txt  about.md  test.simics  timer_test.c
test/simics/uart/: CMakeLists.txt  about.md  test.simics  uart_test.c
test/simics/watchdog/: CMakeLists.txt  about.md  test.simics  watchdog_test.c
test/simics/xgmac/: CMakeLists.txt  test.simics  xgmac_test.c
test/unit/: CMakeLists.txt  about.md
test/unit/clkmgr/: CMakeLists.txt  clkmgr_unittest.cpp  test.simics
test/unit/common/: about.md
test/unit/hps_mailbox/: CMakeLists.txt  hpsmbox_unittest.cpp  test.simics
test/unit/rstmgr/: CMakeLists.txt  rstmgr_unittest.cpp  test.simics
test/unit/sanity/: CMakeLists.txt  test.simics
test/unit/smmu/: CMakeLists.txt  smmu_unittest.cpp  test.simics
test/unit/sysmgr/: CMakeLists.txt  sysmgr_ioctl_expectations.h  sysmgr_ioctl_unittest.cpp  sysmgr_unittest.cpp  test.simics
test/unit/watchdog/: CMakeLists.txt  test.simics  watchdog_unittest.cpp
test/unit/xgmac/: CMakeLists.txt  test.simics  xgmac_unittest.cpp
