target_include_directories(alterametal PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(base)
add_subdirectory(clkmgr)
add_subdirectory(rstmgr)
add_subdirectory(gpio)
add_subdirectory(timer)
add_subdirectory(gic)
add_subdirectory(uart)
add_subdirectory(i2c)
add_subdirectory(i3c)
add_subdirectory(mmu)
add_subdirectory(smmu)
add_subdirectory(spi)
add_subdirectory(qspi)
add_subdirectory(sysmgr)
add_subdirectory(watchdog)
add_subdirectory(combophy)
add_subdirectory(sdmmc)
add_subdirectory(dma)
add_subdirectory(hps_mailbox)
add_subdirectory(noc_firewall)
add_subdirectory(noc_probe)
add_subdirectory(ccu)
add_subdirectory(xgmac)
