add_subdirectory(unit)

add_compile_definitions(IN_TESTS)

add_subdirectory(simics/atf-boot)
add_subdirectory(simics/ocram-boot)
add_subdirectory(simics/uart)
add_subdirectory(simics/i2c)
add_subdirectory(simics/mmu)
add_subdirectory(simics/spi)
add_subdirectory(simics/qspi)
add_subdirectory(simics/i3c)
add_subdirectory(simics/timer)
add_subdirectory(simics/hello-world)
add_subdirectory(simics/watchdog)
add_subdirectory(simics/sdmmc)
add_subdirectory(simics/dma)
add_subdirectory(simics/hps_mailbox)
add_subdirectory(simics/combophy)
add_subdirectory(simics/noc_firewall)
add_subdirectory(simics/noc_probe)
add_subdirectory(simics/bridge)
add_subdirectory(simics/ccu)
add_subdirectory(simics/xgmac)
add_subdirectory(simics/smmu)
